using System;
using System.Collections.Generic;
using System.Text;

namespace ipsc6.agent.client
{
    public enum TeleState
    {
        HangUp = 0,
        OffHook = 1,
    }
}
